change some text

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
 
     <title>Persewaan Alat Musik</title>
-    <meta content="Sewa Hiace Jogja - Paket Harga Sewa Hiace Jogja untuk tujuan ke berbagai kota" name="description" />
-    <meta content="Sewa Hiace Jogja" name="keywords" />
+    <meta content="Sewa Alat Musik - Paket Harga Sewa Alat Musik" name="description" />
+    <meta content="Sewa Alat Musik" name="keywords" />
 
     <!-- Favicons (logo web) --> 
     <link href="assets/img/logo.png" rel="icon" />
@@ -58,7 +58,6 @@
           
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="Sewa Hiace Jogja" class="img-fluid"></a>-->
 
         <nav id="navbar" class="navbar">
           <ul>
@@ -305,23 +304,23 @@
                 Emang harus ya di Uhuuy Studio? Bener banget! Uhuuy Studio menyewakan berbagai alat musik hingga sound system, 
                 sesuai dengan kebutuhan kamu. Dan juga, disini kami memberikan harga yang sangat terjangkau, eits tapi untuk alatnya
                 kita tetap memberikan yang kualitas premium loh.
-              </p>
-              <h3>Apa aja sih keunggulan Sewa Alat Musik di Uhuuy Studio ?</h3>
+              </p> <br>
+              <h3>Apa aja sih keunggulan sewa alat musik di Uhuuy Studio ?</h3>
               <ul>
                 <li>
                   <i class="bx bx-check-double"></i> Kondisi alat selalu musik baik dan terawat
                 </li>
                 <li>
-                  <i class="bx bx-check-double"></i> Free Ongkir untuk jarak max 7km
+                  <i class="bx bx-check-double"></i> Free Ongkir untuk jarak max 7 km
                 </li>
                 <li>
-                  <i class="bx bx-check-double"></i> Pilihan Paket Lengkap dan Fleksibel sesuai kebutuhan Anda
+                  <i class="bx bx-check-double"></i> Pilihan paket lengkap dan fleksibel sesuai kebutuhan Anda
                 </li>
                 <li>
-                  <i class="bx bx-check-double"></i> Reservasi 24 Jam
+                  <i class="bx bx-check-double"></i> Reservasi 24 jam
                 </li>
                 <li>
-                  <i class="bx bx-check-double"></i> Harga Terjangkau dengan kualitas premium
+                  <i class="bx bx-check-double"></i> Harga terjangkau dengan kualitas premium
                 </li>
               </ul>
             </div>
@@ -353,9 +352,9 @@
       <section id="pricing" class="pricing">
         <div class="container" data-aos="fade-up">
           <div class="section-title">
-            <h2>Paket Harga Sewa Hiace Jogja</h2>
+            <h2>Paket Harga Sewa Alat Musik</h2>
             <p>
-              Untuk Area DIY
+              Untuk Area Surabaya
             </p>
           </div>
 
@@ -597,7 +596,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-2"
                   class="collapsed"
-                  >Kota Mana Saja yang bisa dikunjungi ?
+                  >Kota mana saja yang bisa dikunjungi ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -644,7 +643,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-4"
                   class="collapsed"
-                  >Paket Apa Saja yang tersedia ?
+                  >Paket apa saja yang tersedia ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -674,7 +673,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-5"
                   class="collapsed"
-                  >Bagaimana cara melakukan Pemesanan ?
+                  >Bagaimana cara melakukan pemesanan ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -702,8 +701,7 @@
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>Chandra JogjaTrans</span></strong
-            >. All Rights Reserved
+            &copy; Copyright <strong><span>...</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
