--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta content="Sewa Alat Musik" name="keywords" />
 
     <!-- Favicons (logo web) --> 
-    <link href="assets/img/logo.png" rel="icon" />
-    <link href="assets/img/logo.png" rel="apple-touch-icon" />
+    <link href="assets/img/logo-crop.png" rel="icon" />
+    <link href="assets/img/logo-crop.png" rel="apple-touch-icon" />
 
     <!-- Google Fonts -->
     <link
@@ -54,7 +54,7 @@
         <h1 class="logo">
           <div class="container">
             <div class="header-left">
-                <a href="#"><img src="assets/img/logo.png"></a>
+                <a href="#"><img src="assets/img/logo-crop.png"></a>
           
         </h1>
         <!-- Uncomment below if you prefer to use an image logo -->
@@ -96,6 +96,7 @@
       >
         <div class="row justify-content-center">
           <div class="col-xl-20 col-lg-20 text-center">
+            <br><br>
             <h1>Persewaan Alat Musik Terlengkap dan Termurah</h1>
             <h2>by Uhuuy Studio</h2>
           </div>
@@ -115,11 +116,6 @@
             data-aos="zoom-in"
             data-aos-delay="200"
           >
-            <a
-              class="text-decoration-none text-reset"
-              target="_blank"
-              href=" "
-            >
              <!-- <keyboard> -->
               <div class="icon-box">
                 <img
@@ -279,16 +275,16 @@
     <!-- End Hero -->
 
       <!-- ======= About Uhuuy Studio ======= -->
-      <section id="about-video" class="about-video">
+      <section id="about" class="about">
         <div class="container" data-aos="fade-up">
           <div class="row">
             <div
               class="col-lg-6 video-box align-self-baseline"
               data-aos="fade-right"
               data-aos-delay="100"
-            >
+            > <br><br><br>
               <img
-                src="assets/img/logo.png"
+                src="assets/img/logo-crop.png"
                 class="img-fluid"
                 alt="Uhuuy Studio"
               />
@@ -701,7 +697,7 @@
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>...</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>ETS PWEB-B 2022 Kelompok 10</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
