--- a/index.html
+++ b/index.html
@@ -361,27 +361,22 @@
               data-aos-delay="100"
             >
               <div class="box">
-                <h3>Paket All In</h3>
-                <img
-                  src="assets/img/gambar1/commuter.png"
-                  class="img-fluid"
-                  alt="Sewa Hiace Jogja"
-                  srcset=""
-                />
-                <h4><sup>IDR</sup>1.095k<span> / All In</span></h4>
+                <h3>Paket Satuan</h3>
+                <h4><sup>IDR</sup>300k<span> / Paket</span></h4>
                 <ul>
-                  <li>Hiace + Driver + BBM</li>
-                  <li>Sepuasnya Seharian</li>
-                  <li class="na">Parkir</li>
-                  <li class="na">Tiket Wisata + Makan Driver</li>
-                  <li class="na">Penginapan + Kuliner</li>
+                  <li>Salah satu alat musik</li>
+                  <li>(Keyboard / Drum / Gitar Elektrik /</li>
+                  <li>Bass Elektrik / Gitar Akustik / Cajon)</li>
+                  <li class="na">Sound System</li>
+                  <li class="na">Ampli</li>
+                  <br>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://api.whatsapp.com/send?phone=6287807482581&text=Hallo Chandra JogjaTrans, Saya mau Sewa Hiace untuk area Jogja IDR 1.095k Paket All In"
+                    href="https://wa.me/6282391986373"
                     class="btn-buy"
-                    >Pesan Sekarang</a
+                    >Sewa Sekarang</a
                   >
                 </div>
               </div>
@@ -393,27 +388,22 @@
               data-aos-delay="100"
             >
               <div class="box">
-                <h3>Paket Lengkap</h3>
-                <img
-                  src="assets/img/gambar1/commuter.png"
-                  class="img-fluid"
-                  alt="Sewa Hiace Jogja"
-                  srcset=""
-                />
-                <h4><sup>IDR</sup>1.295k<span> / Lengkap</span></h4>
+                <h3>Paket Satuan + Sound</h3>
+                <h4><sup>IDR</sup>2.000k<span> / Paket</span></h4>
                 <ul>
-                  <li>Hiace + Driver + BBM</li>
-                  <li>Sepuasnya Seharian</li>
-                  <li>Parkir + Makan Driver</li>
-                  <li class="na">Tiket Wisata</li>
-                  <li class="na">Kuliner + Penginapan</li>
+                  <li>Salah satu alat musik</li>
+                  <li>(Keyboard / Drum / Gitar Elektrik /</li>
+                  <li>Bass Elektrik / Gitar Akustik / Cajon)</li>
+                  <li>Sound System</li>
+                  <li class="na">Ampli</li>
+                  <br>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://api.whatsapp.com/send?phone=6287807482581&text=Hallo Chandra JogjaTrans, Saya mau Sewa Hiace untuk Area Jogja IDR 1.295k Paket Lengkap"
+                    href="https://wa.me/6282391986373"
                     class="btn-buy"
-                    >Pesan Sekarang</a
+                    >Sewa Sekarang</a
                   >
                 </div>
               </div>
@@ -424,28 +414,23 @@
               data-aos="zoom-in"
               data-aos-delay="100"
             >
-              <div class="box">
-                <h3>Paket Spesial</h3>
-                <img
-                  src="assets/img/gambar1/commuter.png"
-                  class="img-fluid"
-                  alt="Sewa Hiace Jogja"
-                  srcset=""
-                />
-                <h4><sup>IDR</sup>1.695k<span> / All In</span></h4>
+            <div class="box">
+              <h3>Paket Ampli</h3>
+                <h4><sup>IDR</sup>1.800k<span> / Paket</span></h4>
                 <ul>
-                  <li>Hiace + Driver + BBM</li>
-                  <li>Sepuasnya Seharian</li>
-                  <li>Parkir + Makan Driver</li>
-                  <li>Dokumentasi</li>
-                  <li class="na">Tiket Wisata</li>
+                  <li>Ampli Gitar Cora DR200MH</li>
+                  <li>Ampli Gitar Russel Rockr80</li>
+                  <li>Ampli Bass GK 400RB</li>
+                  <li>Ampli Keyboard Roland Kc 550</li>
+                  <li>Keyboard Roland Exr3s</li>
+                  <li>4 unit DI Box + Mic Drum</li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://api.whatsapp.com/send?phone=6287807482581&text=Hallo Chandra JogjaTrans, Saya mau Sewa Hiace untuk Area Jogja IDR 1.695k / Paket Spesial"
+                    href="https://wa.me/6282391986373"
                     class="btn-buy"
-                    >Pesan Sekarang</a
+                    >Sewa Sekarang</a
                   >
                 </div>
               </div>
@@ -457,28 +442,23 @@
               data-aos-delay="100"
             >
               <div class="box mt-5">
-                <h3>Paket All In</h3>
-                <img
-                  src="assets/img/gambar1/premio.png"
-                  class="img-fluid"
-                  alt="Sewa Hiace Jogja"
-                  srcset=""
-                />
-                <h4><sup>IDR</sup>1.295k<span> / All In</span></h4>
+                <h3>Paket Alat Akustik</h3>
+                <h4><sup>IDR</sup>1.500k<span> / Paket</span></h4>
                 <ul>
-                  <li>Hiace Premio + Driver + BBM</li>
-                  <li>Sepuasnya Seharian</li>
-                  <li class="na">Parkir</li>
-                  <li class="na">Tiket Wisata + Makan Driver</li>
-                  <li class="na">Penginapan + Kuliner</li>
+                  <li>Royal Cajon</li>
+                  <li>Gitar Akustik Elektrik Cort</li>
+                  <li>Gitar Akustik Elektrik Yamaha</li>
+                  <li>Bass Elektrik Rockson</li>
+                  <li>Keyboard Roland</li>
+                  <li class="na">Sound System</li>
+                  <li class="na">Ampli</li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://api.whatsapp.com/send?phone=6287807482581&text=Hallo Chandra JogjaTrans, Saya mau Sewa Hiace Premio
-                     untuk area Jogja IDR 1.295k Paket All In"
+                    href="https://wa.me/6282391986373"
                     class="btn-buy"
-                    >Pesan Sekarang</a
+                    >Sewa Sekarang</a
                   >
                 </div>
               </div>
@@ -490,28 +470,22 @@
               data-aos-delay="100"
             >
               <div class="box mt-5">
-                <h3>Paket Lengkap</h3>
-                <img
-                  src="assets/img/gambar1/premio.png"
-                  class="img-fluid"
-                  alt="Sewa Hiace Jogja"
-                  srcset=""
-                />
-                <h4><sup>IDR</sup>1.495k<span> / Lengkap</span></h4>
+                <h3>Paket Alat Akustik + Sound</h3>
+                <h4><sup>IDR</sup>3.000k<span> / Paket</span></h4>
                 <ul>
-                  <li>Hiace Premio + Driver + BBM</li>
-                  <li>Sepuasnya Seharian</li>
-                  <li>Parkir + Makan Driver</li>
-                  <li class="na">Tiket Wisata</li>
-                  <li class="na">Kuliner + Penginapan</li>
+                  <li>Royal Cajon</li>
+                  <li>Gitar Akustik Elektrik Cort</li>
+                  <li>Gitar Akustik Elektrik Yamaha</li>
+                  <li>Bass Elektrik Rockson</li>
+                  <li>Keyboard Roland</li>
+                  <li>Sound System</li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://api.whatsapp.com/send?phone=6287807482581&text=Hallo Chandra JogjaTrans, Saya mau Sewa Hiace Premio 
-                    untuk Area Jogja IDR 1.495k Paket Lengkap"
+                    href="https://wa.me/6282391986373"
                     class="btn-buy"
-                    >Pesan Sekarang</a
+                    >Sewa Sekarang</a
                   >
                 </div>
               </div>
@@ -523,28 +497,21 @@
               data-aos-delay="100"
             >
               <div class="box mt-5">
-                <h3>Paket Spesial</h3>
-                <img
-                  src="assets/img/gambar1/premio.png"
-                  class="img-fluid"
-                  alt="Sewa Hiace Jogja"
-                  srcset=""
-                />
-                <h4><sup>IDR</sup>1.895k<span> / All In</span></h4>
+                <h3>Paket Alat Band Standard</h3>
+                <h4><sup>IDR</sup>3.500k<span> / Paket</span></h4>
                 <ul>
-                  <li>Hiace Premio + Driver + BBM</li>
-                  <li>Sepuasnya Seharian</li>
-                  <li>Parkir + Makan Driver</li>
-                  <li>Dokumentasi</li>
-                  <li class="na">Tiket Wisata</li>
+                  <li>Drum Mapex + Cymbal Zildjian</li>
+                  <li>Bass Rockson + Amplifier Gallien Krueger</li>
+                  <li>Gitar Ibanez + Amplfier Cora DR200</li>
+                  <li>Gitar Fender + Amplifier Russel Rockr80</li>
+                  <li>Keyboard Roland EXr3s + Amplifier Roland KC 550</li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://api.whatsapp.com/send?phone=6287807482581&text=Hallo Chandra JogjaTrans, Saya mau Sewa Hiace Premio 
-                    untuk Area Jogja IDR 1.895k / Paket Spesial"
+                    href="https://wa.me/6282391986373"
                     class="btn-buy"
-                    >Pesan Sekarang</a
+                    >Sewa Sekarang</a
                   >
                 </div>
               </div>
