--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
               <a
                 class="getstarted"
                 target="_blank"
-                href=" "
+                href="https://wa.me/6281232749689"
                 >Pesan Sekarang</a
               >
             </li>
           </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
         </nav>
         <!-- .navbar -->
       </div>
@@ -104,7 +103,7 @@
         <div class="text-center">
           <a
             target="_blank"
-            href=" "
+            href="https://wa.me/6281232749689"
             class="btn-get-started scrollto"
             >Jadwalkan Sekarang</a
           >
@@ -126,6 +125,7 @@
                   srcset=""
                 />
                 <h4 class="title">Keyboard</h4>
+                <p class="description"> Rp 350.000 </p>
               </div>
             </a>
           </div>
@@ -145,6 +145,7 @@
                   srcset=""
                 />
                 <h4 class="title">Drum</h4>
+                <p class="description"> Rp 750.000 </p>
               </div>
             </a>
           </div>
@@ -165,6 +166,7 @@
                 srcset=""
               />
               <h4 class="title">Gitar Elektrik</h4>
+              <p class="description"> Rp 300.000 </p>
             </div>
           </a>
           </div>
@@ -184,6 +186,7 @@
               srcset=""
             />
             <h4 class="title">Bass Elektrik</h4>
+            <p class="description"> Rp 300.000 </p>
           </div>
         </a>
         </div>
@@ -194,7 +197,7 @@
         >
 
            <!-- <gitar akustik> -->
-            <div class="icon-box">
+            <div class="icon-box mt-5">
               <img
                 src="assets/img/gambar1/gitarakustik.jpg"
                 class="img-fluid"
@@ -203,6 +206,7 @@
                 srcset=""
               />
               <h4 class="title">Gitar Akustik</h4>
+              <p class="description"> Rp 250.000 </p>
             </div>
           </a>
         </div>
@@ -214,15 +218,16 @@
         >
         
         <!-- <ampli> -->
-          <div class="icon-box">
+          <div class="icon-box mt-5">
             <img
-              src="assets/img/gambar1/ampli.jpg"
+              src="assets/img/gambar1/ampli.png"
               class="img-fluid"
               width="100%"
               alt="Uhuuy Studio"
               srcset=""
             />
             <h4 class="title">Ampli</h4>
+            <p class="description"> Rp 350.000 </p>
           </div>
         </a>
         </div>
@@ -233,7 +238,7 @@
         >             
 
         <!-- <cajon> -->
-          <div class="icon-box">
+          <div class="icon-box mt-5">
             <img
               src="assets/img/gambar1/cajon.jpg"
               class="img-fluid"
@@ -242,6 +247,7 @@
               srcset=""
             />
             <h4 class="title">Cajon</h4>
+            <p class="description"> Rp 100.000 </p>
           </div>
         </a>
         </div>
@@ -252,15 +258,16 @@
         >             
 
         <!-- <soundsystem> -->
-          <div class="icon-box">
+          <div class="icon-box mt-5">
             <img
-              src="assets/img/gambar1/soundsystem.jpg"
+              src="assets/img/gambar1/soundsystem.png"
               class="img-fluid"
               width="100%"
               alt="Uhuuy Studio"
               srcset=""
             />
             <h4 class="title">Sound System</h4>
+            <p class="description"> Rp 450.000 </p>
           </div>
         </a>
         </div>
@@ -304,7 +311,10 @@
               <h3>Apa aja sih keunggulan sewa alat musik di Uhuuy Studio ?</h3>
               <ul>
                 <li>
-                  <i class="bx bx-check-double"></i> Kondisi alat selalu musik baik dan terawat
+                  <i class="bx bx-check-double"></i> Kondisi alat musik selalu baik dan terawat
+                </li>
+                <li>
+                  <i class="bx bx-check-double"></i> Unit tersedia banyak
                 </li>
                 <li>
                   <i class="bx bx-check-double"></i> Free Ongkir untuk jarak max 7 km
@@ -349,9 +359,7 @@
         <div class="container" data-aos="fade-up">
           <div class="section-title">
             <h2>Paket Harga Sewa Alat Musik</h2>
-            <p>
-              Untuk Area Surabaya
-            </p>
+
           </div>
 
           <div class="row">
@@ -361,20 +369,23 @@
               data-aos-delay="100"
             >
               <div class="box">
-                <h3>Paket Satuan</h3>
-                <h4><sup>IDR</sup>300k<span> / Paket</span></h4>
+                <h3>Paket Satuan (Pelajar)</h3>
+                <h4>Disc 10%<span> / Item</span></h4>
                 <ul>
                   <li>Salah satu alat musik</li>
                   <li>(Keyboard / Drum / Gitar Elektrik /</li>
-                  <li>Bass Elektrik / Gitar Akustik / Cajon)</li>
-                  <li class="na">Sound System</li>
+                  <li>Bass Elektrik / Gitar Akustik / Cajon / Sound System)</li>
                   <li class="na">Ampli</li>
+                  <li> </li>
+                  <li> </li>
+                  <li> </li>
+                  <li> </li>
                   <br>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://wa.me/6282391986373"
+                    href="https://wa.me/6281232749689"
                     class="btn-buy"
                     >Sewa Sekarang</a
                   >
@@ -389,7 +400,7 @@
             >
               <div class="box">
                 <h3>Paket Satuan + Sound</h3>
-                <h4><sup>IDR</sup>2.000k<span> / Paket</span></h4>
+                <h4><sup>IDR</sup>500k-1.000k<span> / Paket</span></h4>
                 <ul>
                   <li>Salah satu alat musik</li>
                   <li>(Keyboard / Drum / Gitar Elektrik /</li>
@@ -401,7 +412,7 @@
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://wa.me/6282391986373"
+                    href="https://wa.me/6281232749689"
                     class="btn-buy"
                     >Sewa Sekarang</a
                   >
@@ -424,11 +435,13 @@
                   <li>Ampli Keyboard Roland Kc 550</li>
                   <li>Keyboard Roland Exr3s</li>
                   <li>4 unit DI Box + Mic Drum</li>
+                  <li> </li>
+                  <li> </li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://wa.me/6282391986373"
+                    href="https://wa.me/6281232749689"
                     class="btn-buy"
                     >Sewa Sekarang</a
                   >
@@ -443,7 +456,7 @@
             >
               <div class="box mt-5">
                 <h3>Paket Alat Akustik</h3>
-                <h4><sup>IDR</sup>1.500k<span> / Paket</span></h4>
+                <h4><sup>IDR</sup>1.300k<span> / Paket</span></h4>
                 <ul>
                   <li>Royal Cajon</li>
                   <li>Gitar Akustik Elektrik Cort</li>
@@ -452,11 +465,12 @@
                   <li>Keyboard Roland</li>
                   <li class="na">Sound System</li>
                   <li class="na">Ampli</li>
+                  <li> </li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://wa.me/6282391986373"
+                    href="https://wa.me/6281232749689"
                     class="btn-buy"
                     >Sewa Sekarang</a
                   >
@@ -471,7 +485,7 @@
             >
               <div class="box mt-5">
                 <h3>Paket Alat Akustik + Sound</h3>
-                <h4><sup>IDR</sup>3.000k<span> / Paket</span></h4>
+                <h4><sup>IDR</sup>1.750k<span> / Paket</span></h4>
                 <ul>
                   <li>Royal Cajon</li>
                   <li>Gitar Akustik Elektrik Cort</li>
@@ -479,11 +493,14 @@
                   <li>Bass Elektrik Rockson</li>
                   <li>Keyboard Roland</li>
                   <li>Sound System</li>
+                  <li> </li>
+                  <li> </li>
+                  <li> </li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://wa.me/6282391986373"
+                    href="https://wa.me/6281232749689"
                     class="btn-buy"
                     >Sewa Sekarang</a
                   >
@@ -505,11 +522,14 @@
                   <li>Gitar Ibanez + Amplfier Cora DR200</li>
                   <li>Gitar Fender + Amplifier Russel Rockr80</li>
                   <li>Keyboard Roland EXr3s + Amplifier Roland KC 550</li>
+                  <li></li>
+                  <li></li>
+                  <li></li>
                 </ul>
                 <div class="btn-wrap">
                   <a
                     target="_blank"
-                    href="https://wa.me/6282391986373"
+                    href="https://wa.me/6281232749689"
                     class="btn-buy"
                     >Sewa Sekarang</a
                   >
@@ -536,7 +556,7 @@
                   data-bs-toggle="collapse"
                   class="collapse"
                   data-bs-target="#faq-list-1"
-                  >Apakah kendaraan yang tersedia hanya Hiace dan Innova saja ?
+                  >Apakah peralatan musik bisa dipakai untuk kebutuhan acara event ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -546,9 +566,9 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Selain Hiace dan Innova, Kami juga punya kendaraan lain yang
-                    tersedia antara lain : Ayla, Agya, Brio, Avanza, Moblio,
-                    Xpander, Fortuner, Pajero Sport, Alphard hingga Bus
+                    Penyewaan alat musik ini bisa dipakai untuk kebutuhan pribadi ataupun kebutuhan event. 
+                    Sangat disarankan untuk mengambil salah satu dari paket yang tersedia 
+                    dibandingkan penyewaan satuan saja untuk memudahkan penyewa dan meringankan biaya sewa.
                   </p>
                 </div>
               </li>
@@ -559,7 +579,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-2"
                   class="collapsed"
-                  >Kota mana saja yang bisa dikunjungi ?
+                  >Uhhuy Studio dapat dikunjungi di kota mana saja ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -569,9 +589,9 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Semua kota di pulau Jawa, Sumatera, Madura, Bali, dan Lombok
-                    bisa dikunjungi. Langsung Telepon / Whatsapp nomor diatas
-                    untuk memberi tahu kota mana tujuan Anda
+                    Untuk sementara Uhuuy Studio berlokasikan di Kota Surabaya 
+                    sehingga kami hanya bisa melayani di Kota Surabaya dan sekitarnya. 
+                    Kontak nomor kami untuk lebih lanjut.
                   </p>
                 </div>
               </li>
@@ -582,7 +602,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-3"
                   class="collapsed"
-                  >Apakah hanya wisata saja yang dilayani ?
+                  >Bagaimana ketentuan pengembalian alat musik yang disewakan ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -592,10 +612,9 @@
                   data-bs-parent=".faq-list"
                 >
                   <p>
-                    Tidak hanya Paket Wisata Saja yang kami Layani. Ada juga
-                    layanan Antar Jemput, Drop Off, Transport Bandara,
-                    Kondangan, Kunjungan Kerja, Acara Keluarga, Reuni,
-                    Gathering, Penelitian, dan lain lain
+                    Perhitungan sewa sehari 24 jam, dengan jam operasional 06.00-22.00. 
+                    Pengembalian alat yang disewakan harus dikembalikan maksimal pada jam yang sama dengan jam sewa di awal. 
+                    Terlambat dalam pengembalian akan dikenakan denda Rp. 20.000,00 per jam.
                   </p>
                 </div>
               </li>
@@ -606,7 +625,7 @@
                   data-bs-toggle="collapse"
                   data-bs-target="#faq-list-4"
                   class="collapsed"
-                  >Paket apa saja yang tersedia ?
+                  >Bagaimana cara melakukan pemesanan ?
                   <i class="bx bx-chevron-down icon-show"></i
                   ><i class="bx bx-chevron-up icon-close"></i
                 ></a>
@@ -616,39 +635,11 @@
                   data-bs-parent=".faq-list"
                 >
                   <ul class="">
-                    <li>Paket Bebas ( Mobil + Driver )</li>
-                    <li>Paket All In ( Mobil + Driver + BBM + Tol + Kapal )</li>
-                    <li>
-                      Paket Lengkap ( Paket All In + Parkir + Makan Driver )
-                    </li>
-                    <li>Paket Spesial ( Paket Lengkap + Tiket Wisata )</li>
-                    <li>Paket Istimewa ( Paket Spesial + Penginapan )</li>
-                    <li>
-                      Paket Markibul ( Paket Istimewa + Kuliner + Dokumentasi )
+                    <li>Untuk menyewa alat musik dari kami dibutuhkan sebuah jaminan pengenal diri (KTP/SIM/Kartu Pelajar/Ijazah) 
+                      atau berupa deposit uang tunai senilai alat musik yang disewakan. 
+                      Setelah diberikan jaminan maka penyewaan dapat berlangsung setelah pembayaran (DP/Lunas) dilakukan.
                     </li>
                   </ul>
-                </div>
-              </li>
-
-              <li data-aos="fade-up" data-aos-delay="400">
-                <i class="bx bx-help-circle icon-help"></i>
-                <a
-                  data-bs-toggle="collapse"
-                  data-bs-target="#faq-list-5"
-                  class="collapsed"
-                  >Bagaimana cara melakukan pemesanan ?
-                  <i class="bx bx-chevron-down icon-show"></i
-                  ><i class="bx bx-chevron-up icon-close"></i
-                ></a>
-                <div
-                  id="faq-list-5"
-                  class="collapse"
-                  data-bs-parent=".faq-list"
-                >
-                  <p>
-                    Silhakan hubungi Kami di nomor 0878-0748-2581 ( Telpon /
-                    Whatsapp ) atau melalui tombol pemesanan diatas
-                  </p>
                 </div>
               </li>
             </ul>
@@ -664,27 +655,22 @@
       <div class="container d-md-flex py-4">
         <div class="me-md-auto text-center text-md-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>ETS PWEB-B 2022 Kelompok 10</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>ETS PWEB-B 2022</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
-            <!-- All the links in the footer should remain intact. -->
-            <!-- You can delete the links only if you purchased the pro version. -->
-            <!-- Licensing information: https://bootstrapmade.com/license/ -->
-            <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/onepage-multipurpose-bootstrap-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            Designed by <a href="  ">Kelompok 10</a>
           </div>
         </div>
         <div class="social-links text-center text-md-right pt-3 pt-md-0">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a
             target="_blank"
-            href="https://www.instagram.com/ayonaikhiace_purworejo/"
-            class="instagram"
-            ><i class="bx bxl-instagram"></i
+            href="https://wa.me/6281232749689"
+            class="whatsapp"
+            ><i class="bx bxl-whatsapp"></i
           ></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
     </footer>
